no really, index slots and css fully worked out

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -129,8 +129,8 @@ div.top {
         .overview {
             position: absolute;
             width: 50%;
-            left: 40%;
-            top: @view-padding-top;
+            right: 40%;
+            top: @view-padding-right;;
             bottom: @view-padding-bottom;
             overflow: auto;
             padding: 0 2em 1em 3em;
