--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -80,6 +80,11 @@ header {
             font-size: .5em;
             color: @discreet-text;
         }
+        
+        a:link, a:visited {
+            color: @link-color;
+            text-decoration: none;
+        }
     }
     
     nav {
@@ -102,17 +107,29 @@ footer {
 // Top layout views
 // ---------------------------------------------------
 div.top {
-    position: relative;
+    position: absolute;
     background: #eee;
-    top: 0;
-    left: @view-margin-left;
+    top: @view-margin-top;
     // width & height set with JS
     -moz-border-radius: 15px;
     border-radius: 15px;
     overflow: hidden;
+    margin: 0 @view-margin-right 0 @view-margin-left;
     
-    loading * {
+    .padding {
+        padding: @view-padding-top @view-padding-right @view-padding-bottom @view-padding-left;
+    }
+    
+    &.loading * {
         display: none;
+    }
+    
+    // navigation bar for book layouts
+    div.navigation-view {
+        float: right;
+        width: 410px;
+        margin-left: 20px;
+        text-align: right;
     }
     
     // index layout
@@ -136,7 +153,7 @@ div.top {
             padding: 0 2em 1em 3em;
             
             // image thumbnails
-            div.thumbs {
+            .thumbs {
                 width: 100px;
                 margin-left: 1em;
                 float: right;
@@ -147,18 +164,58 @@ div.top {
             }
         }
     }
+    
+    // book summary layout
+    &.layout-book-3up-left {
+        .bottom-slot {
+            position: relative;
+            // height set with JS
+            
+            .right-panel {
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                overflow: auto;
+                // size set with JS
+                
+                div {
+                    padding: 1.5em 1em;
+                }
+                
+                // should this go somewhere view-specific?
+                svg {
+                    width: 380px;
+                    
+                    text.title {
+                        text-anchor: end;
+                        font-size: 10px;
+                        cursor: pointer;
+                    }
+                }
+            }
+            
+            .left-panel {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                // size set with JS
+            }
+            
+        }
+    }
+}
+
+div.book-title-view {
+    h2 { margin: 0;
+        &.on { cursor: pointer; }
+    }
+    p { margin-top: 0; }
 }
 
 div.loading {
     background-image: url(../images/blue-loading.gif);
     background-repeat: no-repeat;
     background-position: 50% 50%;
-}
-div.navigation-view {
-    float: right;
-    width: 410px;
-    margin-left: 20px;
-    text-align: right;
 }
 div.panel {
     background-color: #FFF;
@@ -205,24 +262,7 @@ div#page-control-view {
     bottom: 0;
 }
 
-/* book summary view */
-div#place-freq-bars-view {
-    float: right;
-    width: 400px;
-    padding: 1.5em 1em;
-    overflow: auto;
-}
-div#place-freq-bars-view svg {
-    width: 380px;
-}
-div#place-freq-bars-view text.title {
-    text-anchor: end;
-    font-size: 10px;
-    cursor: pointer;
-}
-div#book-summary-text-view {
-    margin-right: 450px;
-}
+
 
 /* book place view */
 div#place-summary-container {
@@ -284,10 +324,7 @@ div.flickr-photo {
 }
 
 /* specific text styles */
-header h1 a:link, header h1 a:visited {
-    color: @link-color;
-    text-decoration: none;
-}
+
 span.place {
     color: @link-color;
     cursor: pointer;
@@ -300,15 +337,7 @@ span.place.hi {
     background: yellow;
 }
 
-div.book-title-view h2 {
-    margin: 0;
-}
-div.book-title-view h2.on {
-    cursor: pointer;
-}
-div.book-title-view p {
-    margin-top: 0;
-}
+
 p.warning {
     font-weight: bold;
     color: #c00;
