book summary passing most tests, navigation view in place

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -166,7 +166,7 @@ div.top {
     }
     
     // book summary layout
-    &.layout-book-3up-left {
+    &.layout-book-summary {
         .bottom-slot {
             position: relative;
             // height set with JS
