--- a/lib/bootstrap/less/bootstrap.less
+++ b/lib/bootstrap/less/bootstrap.less
@@ -22,9 +22,9 @@
 
 // Base CSS
 @import "type.less";
-@import "code.less";
-@import "forms.less";
-@import "tables.less";
+// @import "code.less";
+// @import "forms.less";
+// @import "tables.less";
 
 // Components: common
 // @import "sprites.less";
