--- a/lib/bootstrap/less/variables.less
+++ b/lib/bootstrap/less/variables.less
@@ -39,8 +39,8 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
-@linkColorHover:        darken(@linkColor, 15%);
+@linkColor:             #4682b4;
+@linkColorHover:        darken(@linkColor, 20%);
 
 
 // Typography
@@ -54,7 +54,7 @@
 @baseLineHeight:        18px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
+@headingsFontFamily:    @serifFontFamily; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    bold;    // instead of browser default, bold
 @headingsColor:         inherit; // empty to use BS default, @textColor
 
@@ -73,8 +73,8 @@
 @btnBackgroundHighlight:            darken(@white, 10%);
 @btnBorder:                         #ccc;
 
-@btnPrimaryBackground:              @linkColor;
-@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 15%);
+@btnPrimaryBackground:              lighten(#4682b4, 15%);
+@btnPrimaryBackgroundHighlight:     darken(saturate(#4682b4, 15%), 5%);
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
@@ -128,8 +128,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "lib/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "lib/bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
