--- a/app/templates/book-summary-text-template.html
+++ b/app/templates/book-summary-text-template.html
@@ -3,4 +3,4 @@
     
     The place most frequently referenced is <span class="place" data-place-id="<%= topPlaces[0].id %>"><%= topPlaces[0].title %></span>, followed by <span class="place" data-place-id="<%= topPlaces[1].id %>"><%= topPlaces[1].title %></span>, <span class="place" data-place-id="<%= topPlaces[2].id %>"><%= topPlaces[2].title %></span>, and <span class="place" data-place-id="<%= topPlaces[3].id %>"><%= topPlaces[3].title %></span>.
 </p>
-<p><button class="goto-reading">Go to Reading View</button></p>
+<p><button class="btn btn-primary goto-reading">Go to Reading View <i class="icon-chevron-right icon-white"></button></p>
