--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -23,18 +23,6 @@
 @view-margin-left: 20px;
 
 // ---------------------------------------------------
-// Mix-ins
-// ---------------------------------------------------
-
-.full-size(@top:0, @right:0, @bottom:0, @left:0) {
-    position: absolute;
-    top: @top;
-    bottom: @bottom;
-    right: @right;
-    left: @left;
-}
-
-// ---------------------------------------------------
 // Basic elements
 // ---------------------------------------------------
 html, body {
@@ -217,6 +205,8 @@ div.top {
                 position: absolute;
                 left: 0;
                 bottom: 0;
+                min-width: 10em;
+                min-height: 10em;
                 // size set with JS
             }
             
