--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -205,8 +205,9 @@ div.top {
                 position: absolute;
                 left: 0;
                 bottom: 0;
-                min-width: 10em;
-                min-height: 10em;
+                
+                // fix for google maps controls
+                img { max-width: none; }
                 // size set with JS
             }
             
