simplifying index layout CSS

--- a/app/templates/book-list-template.html
+++ b/app/templates/book-list-template.html
@@ -1,2 +1,4 @@
-<h3>Select a book to view:</h3>
-<div id="book-list"></div>
+<div class="padding">
+    <h3>Select a book to view:</h3>
+    <div class="book-list"></div>
+</div>
