--- a/lib/bootstrap/less/bootstrap.less
+++ b/lib/bootstrap/less/bootstrap.less
@@ -18,7 +18,7 @@
 // Grid system and page structure
 @import "scaffolding.less";
 @import "grid.less";
-@import "layouts.less";
+// @import "layouts.less";
 
 // Base CSS
 @import "type.less";
