--- a/lib/bootstrap/less/grid.less
+++ b/lib/bootstrap/less/grid.less
@@ -1,5 +1,5 @@
 // Fixed (940px)
-#grid > .core(@gridColumnWidth, @gridGutterWidth);
+// #grid > .core(@gridColumnWidth, @gridGutterWidth);
 
 // Fluid (940px)
 #grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
