simplifying index layout CSS

--- a/app/templates/layout-book-summary.html
+++ b/app/templates/layout-book-summary.html
@@ -1,4 +1,4 @@
-<div class="padding">
+<div class="layout">
     <div class="navigation-view"></div>
     <div class="book-title-view"></div>
     <div class="bottom-slot">
