fixing CSS for summary view

--- a/app/templates/layout-book-summary.html
+++ b/app/templates/layout-book-summary.html
@@ -5,6 +5,6 @@
         <div class="right-panel panel">
         </div>
         <div class="text-slot"></div>
-        <div class="left-panel panel"></div>
+        <div class="left-panel"></div>
     </div>
 </div>
