--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -162,17 +162,6 @@ div.top {
                 div {
                     padding: 1.5em 1em;
                 }
-                
-                // should this go somewhere view-specific?
-                svg {
-                    width: 380px;
-                    
-                    text.title {
-                        text-anchor: end;
-                        font-size: 10px;
-                        cursor: pointer;
-                    }
-                }
             }
             
             .left-panel {
@@ -210,6 +199,21 @@ div.top {
     overflow: auto;
     height: 100%;
     .padding { padding: 1em; }
+}
+
+// summary page map view
+.summary-map-view {
+    width: 100%;
+    height: 100%;
+}
+
+// place frequency bars view
+.freq-bars-view {
+    text.title {
+        text-anchor: end;
+        font-size: 10px;
+        cursor: pointer;
+    }
 }
 
 // navigation bar for book layouts
