--- a/app/templates/layout-book-summary.html
+++ b/app/templates/layout-book-summary.html
@@ -1,10 +1,10 @@
 <div class="layout">
     <div class="navigation-view"></div>
     <div class="book-title-view"></div>
-    <div class="bottom-slot">
-        <div class="right-panel panel">
+    <div class="bottom-slot row-fluid">
+        <div class="right-panel panel span4">
         </div>
-        <div class="text-slot"></div>
-        <div class="left-panel"></div>
+        <div class="text-slot span8"></div>
+        <div class="left-panel span8"></div>
     </div>
 </div>
