fixing CSS for summary view

--- a/app/templates/layout-book-summary.html
+++ b/app/templates/layout-book-summary.html
@@ -1,10 +1,13 @@
 <div class="layout">
     <div class="navigation-view"></div>
     <div class="book-title-view"></div>
-    <div class="bottom-slot row-fluid">
-        <div class="right-panel panel span4">
+    <div class="bottom-slot">
+        <div class="row-fluid">
+            <div class="text-slot span8"></div>
+            <div class="right-panel panel span5"></div>
         </div>
-        <div class="text-slot span8"></div>
-        <div class="left-panel span8"></div>
+        <div class="row-fluid">
+            <div class="left-panel panel span7"></div>
+        </div>
     </div>
 </div>
