--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -155,7 +155,7 @@ div.top {
             .right-panel {
                 position: absolute;
                 right: 0;
-                bottom: 0;
+                top: 0;
                 overflow: auto;
                 // size set with JS
                 
