--- a/app/templates/layout-book-reading.html
+++ b/app/templates/layout-book-reading.html
@@ -1,8 +1,8 @@
-<div class="padding">
+<div class="layout">
     <div class="navigation-view"></div>
     <div class="book-title-view"></div>
     <div class="bottom-slot">
         <div class="left-panel"></div>
-        <div class="right-panel panel">
+        <div class="right-panel panel"></div>
     </div>
 </div>
