--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -9,7 +9,7 @@
 @discreet-text: #999;
 
 // top view dimensions
-@header-height: 40px;
+@header-height: 30px;
 @footer-height: 35px;
 
 @view-padding-top: 20px;
@@ -78,7 +78,7 @@ header {
     }
     
     nav {
-        margin: 1em 2em;
+        margin: .4em 2em;
         float: left;
         font-weight: bold;
     }
@@ -236,6 +236,7 @@ div.top {
     }
 }
 
+// book title view
 .book-title-view {
     h2 { margin: 0;
         &.on { cursor: pointer; }
