--- a/lib/bootstrap/less/type.less
+++ b/lib/bootstrap/less/type.less
@@ -39,21 +39,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
   font-size: 24px;
-  line-height: @baseLineHeight * 2;
+  // line-height: @baseLineHeight * 2;
   small {
     font-size: 18px;
   }
 }
 h2 {
   font-size: 18px;
-  line-height: @baseLineHeight * 2;
+  // line-height: @baseLineHeight * 2;
   small {
     font-size: 18px;
   }
 }
 h3 {
   font-size: 14px;
-  line-height: @baseLineHeight * 1.5;
+  // line-height: @baseLineHeight * 1.5;
   small {
     font-size: 14px;
   }
