--- a/app/templates/layout-book-reading.html
+++ b/app/templates/layout-book-reading.html
@@ -1,8 +1,8 @@
 <div class="layout">
     <div class="navigation-view"></div>
     <div class="book-title-view"></div>
-    <div class="bottom-slot">
-        <div class="left-panel"></div>
-        <div class="right-panel panel"></div>
+    <div class="bottom-slot row-fluid">
+        <div class="left-panel span5 full-height"></div>
+        <div class="right-panel span7 full-height"></div>
     </div>
 </div>
