--- a/app/templates/reading-pane-template.html
+++ b/app/templates/reading-pane-template.html
@@ -1,13 +1,2 @@
-<div id="page-view" class="loading"></div>
-<div id="page-control-view">
-    <div id="nextprev">
-        <span id="prev" class="control">&lt;&lt; previous</span>
-        <input id="page-id" maxlength="5">
-        <span id="next" class="control">next &gt;&gt;</span>
-    </div>
-    <div id="imagetoggle">
-        Show:
-        <span id="showtext" class="control">Text</span> |
-        <span id="showimg" class="control">Scan</span>
-    </div>
-</div>
+<div class="page-view loading"></div>
+<div class="page-controls"></div>
