--- a/app/templates/layout-book-summary.html
+++ b/app/templates/layout-book-summary.html
@@ -1,13 +1,15 @@
 <div class="layout">
-    <div class="navigation-view"></div>
-    <div class="book-title-view"></div>
-    <div class="bottom-slot">
-        <div class="row-fluid">
-            <div class="text-slot span7"></div>
-            <div class="right-panel panel span5"></div>
-        </div>
-        <div class="row-fluid">
-            <div class="left-panel panel span7"></div>
+    <div>
+        <div class="navigation-view"></div>
+        <div class="book-title-view"></div>
+    </div>
+    <div class="bottom-slot fill">
+        <div class="row-fluid full-height">
+            <div class="span7 full-height" style="position:relative;">
+                <div class="text-slot"></div>
+                <div class="left-panel panel fill"></div>
+            </div>
+            <div class="right-panel panel span5 full-height"></div>
         </div>
     </div>
 </div>
