--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -117,6 +117,14 @@ div.top {
         .full-height {
             height: 100%;
         }
+        
+        .fill {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            // height set with JS
+        }
     }
     
     // sliding transitions
@@ -148,33 +156,22 @@ div.top {
     
     // book summary layout
     &.layout-book-summary {
-        .bottom-slot {
-            position: relative;
+            
+        .right-panel {
+            overflow: auto;
+            
+            div {
+                padding: 1.5em 1em;
+            }
+        }
+        
+        .left-panel {
             // height set with JS
             
-            .right-panel {
-                position: absolute;
-                right: 0;
-                top: 0;
-                overflow: auto;
-                // height set with JS
-                
-                div {
-                    padding: 1.5em 1em;
-                }
-            }
-            
-            .left-panel {
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                // height set with JS
-                
-                // fix for google maps controls
-                img { max-width: none; }
-            }
-            
+            // fix for google maps controls
+            img { max-width: none; }
         }
+        
     }
 }
 
@@ -219,6 +216,10 @@ div.top {
     }
 }
 
+.padding { 
+    padding: 1em; 
+}
+
 
 // ---------------------------------------------------
 // View-specific slot styles
@@ -229,13 +230,13 @@ div.top {
 .index-overview-template {
     overflow: auto;
     height: 100%;
-    .padding { padding: 1em; }
 }
 
 // summary page map view
 .summary-map-view {
     width: 100%;
     height: 100%;
+    overflow: auto;
 }
 
 // place frequency bars view
