generalizing height-filling CSS and JS

--- a/app/templates/layout-book-reading.html
+++ b/app/templates/layout-book-reading.html
@@ -1,7 +1,9 @@
 <div class="layout">
-    <div class="navigation-view"></div>
-    <div class="book-title-view"></div>
-    <div class="bottom-slot row-fluid">
+    <div>
+        <div class="navigation-view"></div>
+        <div class="book-title-view"></div>
+    </div>
+    <div class="bottom-slot row-fluid fill">
         <div class="left-panel span5 full-height"></div>
         <div class="right-panel span7 full-height"></div>
     </div>
