more CSS tweaks - slot views should be responsible for their own styling, layouts responsible for their shape

--- a/app/templates/layout-book-summary.html
+++ b/app/templates/layout-book-summary.html
@@ -9,7 +9,7 @@
                 <div class="text-slot"></div>
                 <div class="left-panel panel fill"></div>
             </div>
-            <div class="right-panel panel span5 full-height"></div>
+            <div class="right-panel panel padded-scroll span5 full-height"></div>
         </div>
     </div>
 </div>
