--- a/app/templates/layout-2col.html
+++ b/app/templates/layout-2col.html
@@ -1,6 +1,6 @@
 <div class="layout">
     <div class="row-fluid full-height">
-        <div class="span5 left-column full-height"></div>
-        <div class="span7 right-column full-height"></div>
+        <div class="left-column span5 full-height"></div>
+        <div class="right-column span7 full-height"></div>
     </div>
 </div>
