fully separating layout styles from view styles

--- a/app/templates/layout-book-3panel.html
+++ b/app/templates/layout-book-3panel.html
@@ -5,11 +5,11 @@
     </div>
     <div class="bottom-slot fill">
         <div class="row-fluid full-height">
-            <div class="span7 full-height" style="position:relative;">
+            <div class="span7 full-height">
                 <div class="text-slot"></div>
-                <div class="left-panel panel fill"></div>
+                <div class="left-panel fill"></div>
             </div>
-            <div class="right-panel panel padded-scroll span5 full-height"></div>
+            <div class="right-panel span5 full-height"></div>
         </div>
     </div>
 </div>
