TimeMap view working (no infowindow)

--- a/app/templates/timemap-template.html
+++ b/app/templates/timemap-template.html
@@ -1,11 +1,10 @@
-<div id="map-container">
-    <div id="map"></div>
+<div class="map-container">
+    <div class="map"></div>
 </div>
-<div id="timeline-container">
-    <div id="timeline"></div>
-    <div id="timeline-controls">
-        <div id="timeline-play" class="ir on">Play</div>
-        <div id="timeline-stop" class="ir">Stop</div>
+<div class="timeline-container">
+    <div class="timeline"></div>
+    <div class="timeline-controls">
+        <div class="timeline-play" class="ir on">Play</div>
+        <div class="timeline-stop" class="ir">Stop</div>
     </div>
 </div>
-<div id="timemap-legend-container">Least referenced <span class="images"></span> Most referenced</div>
