--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -173,6 +173,7 @@ div.top {
         position: absolute;
         bottom: 0;
         width: 100%;
+        height: 1.5em;
     }
 }
 
@@ -327,6 +328,26 @@ div.top {
     }
 }
 
+// single page view
+.single-page {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    padding: 1.5em 1em;
+    display: none;
+    overflow: auto;
+    font-size: 1.2em;
+    font-family: @serifFontFamily;
+
+    .img {
+        display: none; 
+        
+        img {
+            width: 100%;
+        }
+    }
+    
+}
 
 
 // ----------------------------------------------------------
@@ -348,22 +369,6 @@ div#page-view {
     position: relative;
     overflow: hidden;
     height: 100%;
-}
-div.single-page {
-    position: absolute;
-    top: 0;
-    bottom: 20px;
-    overflow: auto;
-    margin-bottom: 1em;
-    font-size: 1.2em;
-    padding: 1.5em 1em;
-    display: none;
-}
-div.single-page .img {
-    display: none;
-}
-div.single-page .img img {
-    width: 100%;
 }
 div#page-control-view {
     width: 95%;
