Pages working, no slide yet

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -331,6 +331,7 @@ div.top {
 // single page view
 .single-page {
     position: absolute;
+    width: 100%;
     top: 0;
     bottom: 0;
     padding: 1.5em 1em;
