Fixing page image styles

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -331,9 +331,10 @@ div.top {
 // single page view
 .single-page {
     position: absolute;
-    width: 100%;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     padding: 1.5em 1em;
     display: none;
     overflow: auto;
@@ -341,7 +342,7 @@ div.top {
     font-family: @serifFontFamily;
 
     .img {
-        display: none; 
+        display: none;
         
         img {
             width: 100%;
