Fixing map initialization problem

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -245,6 +245,10 @@ div.top {
 .summary-map-view {
     width: 100%;
     overflow: auto;
+    
+    > div {
+        height: 100%;
+    }
 }
 
 // place frequency bars view
