Page slide working

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -338,9 +338,7 @@ footer {
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 1.5em 1em;
+    padding: 1.5em 12px;
     display: none;
     overflow: auto;
     font-size: 1.2em;
