Message view using bootstrap styles, adding close button and types

--- a/lib/bootstrap/less/bootstrap.less
+++ b/lib/bootstrap/less/bootstrap.less
@@ -31,7 +31,7 @@
 // @import "dropdowns.less";
 // @import "wells.less";
 // @import "component-animations.less";
-// @import "close.less";
+@import "close.less";
 
 // Components: Buttons & Alerts
 @import "buttons.less";
@@ -46,7 +46,7 @@
 // @import "pager.less";
 
 // Components: Popovers
-@import "modals.less";
+// @import "modals.less";
 // @import "tooltip.less";
 // @import "popovers.less";
 
