--- a/lib/bootstrap/less/bootstrap.less
+++ b/lib/bootstrap/less/bootstrap.less
@@ -46,7 +46,7 @@
 // @import "pager.less";
 
 // Components: Popovers
-// @import "modals.less";
+@import "modals.less";
 // @import "tooltip.less";
 // @import "popovers.less";
 
