Adding timeline play/pause back in

--- a/app/templates/navigation-view-template.html
+++ b/app/templates/navigation-view-template.html
@@ -1,6 +1,6 @@
 <nav class="btn-group" data-toggle="buttons-radio">
-  <button class="btn btn-small btn-primary" data-view-id="book-summary"><i class="icon-star icon-white"></i> Book Summary</button>
-  <button class="btn btn-small btn-primary" data-view-id="reading-view"><i class="icon-book icon-white"></i> Reading View</button>
-  <button class="btn btn-small btn-primary" data-view-id="place-view"><i class="icon-globe icon-white"></i> Place Detail</button>
+  <button class="btn btn-small btn-primary" title="Book Summary" data-view-id="book-summary"><i class="icon-star icon-white"></i> Book Summary</button>
+  <button class="btn btn-small btn-primary" title="Reading View" data-view-id="reading-view"><i class="icon-book icon-white"></i> Reading View</button>
+  <button class="btn btn-small btn-primary" title="Place Detail" data-view-id="place-view"><i class="icon-globe icon-white"></i> Place Detail</button>
 </nav>
-<a class="permalink btn btn-primary" href="#"><i class="icon-bookmark icon-white"></i></a>
+<a class="permalink btn btn-primary" title="Permalink" href="#"><i class="icon-bookmark icon-white"></i></a>
