--- a/app/templates/timemap-template.html
+++ b/app/templates/timemap-template.html
@@ -4,7 +4,7 @@
 <div class="timeline-container">
     <div class="timeline"></div>
     <div class="timeline-controls">
-        <div class="timeline-play" class="ir on">Play</div>
-        <div class="timeline-stop" class="ir">Stop</div>
+        <div class="timeline-play ir on">Play</div>
+        <div class="timeline-stop ir">Stop</div>
     </div>
 </div>
